--- a/pico/themes/magazine/single.twig
+++ b/pico/themes/magazine/single.twig
@@ -89,7 +89,7 @@
 				{% if config.authorimage %}
 				<img src="{{ config.authorimage }}" alt="{{ config.author }}" class="img-responsive">
 				{% else %}
-				<img src="{{ theme_url }}/images/person1.jpg" alt="{{ config.author }}" class="img-responsive">
+				<img src="{{ config.authorimagealt }}" alt="{{ config.author }}" class="img-responsive">
 				{% endif %}
 			</figure>
 			<h3 class="heading">About Me</h3>
